<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCharacterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#2B2828"
        tools:ignore="MissingConstraints"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_criar_atualizar_personagem"
        android:textColor="#fff"
        android:textSize="25dp"
        android:id="@+id/tv_titulo"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_id_personagem"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        android:id="@+id/tv_id"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_id_personagem"
        android:id="@+id/et_id"
        android:background="#fff"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></EditText>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tv_obs_personagem"
    android:textColor="#636363"
    app:layout_constraintTop_toBottomOf="@+id/sw_lado"
    android:id="@+id/tv_obs"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:textSize="10sp"
    ></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_obs2_personagem"
        android:textColor="#FF636363"
        app:layout_constraintTop_toBottomOf="@+id/tv_obs"
        android:id="@+id/tv_obs2"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="10sp"
        ></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_obs3_personagem"
        android:textColor="#FF636363"
        app:layout_constraintTop_toBottomOf="@+id/tv_obs2"
        android:id="@+id/tv_obs3"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="10sp"
        ></TextView>


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tv_nome_personagem"
    android:textColor="#FFF"
    app:layout_constraintTop_toBottomOf="@+id/et_id"
    android:id="@+id/tv_nome"
    android:layout_marginTop="5dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    ></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_nome_personagem"
        android:id="@+id/et_nome"
        android:background="#fff"
        app:layout_constraintTop_toBottomOf="@+id/tv_nome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_arma_personagem"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/et_nome"
        android:id="@+id/tv_arma"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_arma_personagem"
        android:id="@+id/et_arma"
        android:background="#fff"
        app:layout_constraintTop_toBottomOf="@+id/tv_arma"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_idade_personagem"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/et_arma"
        android:id="@+id/tv_idade"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_idade_personagem"
        android:id="@+id/et_idade"
        android:background="#fff"
        app:layout_constraintTop_toBottomOf="@+id/tv_idade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="number"
        ></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_imagem_personagem"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/et_idade"
        android:id="@+id/tv_imagem"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_marginTop="5dp"
        android:layout_height="25dp"
        android:hint="@string/et_imagem_personagem"
        android:id="@+id/et_imagem"
        android:background="#fff"
        app:layout_constraintTop_toBottomOf="@+id/tv_imagem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></EditText>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sw_lado"
        android:text="@string/sw_lado"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/et_imagem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:checked="true"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_criar_atualizar"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_obs3"
        android:id="@+id/bt_criar_atualizar"
        android:layout_marginTop="10dp"
        android:onClick="criarNovoAtualizarPersonagem"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_voltar"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_obs3"
        android:id="@+id/bt_voltar"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="voltarTelaPersonagem"
        />





</androidx.constraintlayout.widget.ConstraintLayout>