<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#2B2828"
        tools:ignore="MissingConstraints"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo_delete"
        android:textColor="#fff"
        android:textSize="25dp"
        android:id="@+id/tv_titulo"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_id_delete"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        android:id="@+id/tv_id"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_id_delete"
        android:id="@+id/et_id"
        android:background="#fff"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ></EditText>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        android:id="@+id/bt_excluir"
        android:onClick="excluir"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_voltar"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_excluir"
        android:id="@+id/bt_voltar"
        android:onClick="voltarTela"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />







</androidx.constraintlayout.widget.ConstraintLayout>