<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="115dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardElevation="1dp"
    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="20dp"
    card_view:cardCornerRadius="5dp"
    >



    <ImageView
        android:id="@+id/imagem_planeta"
        android:layout_width="120dp"
        android:layout_height="115dp" />

    <TextView
        android:id="@+id/nome_planeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planets_post_nome"

        android:layout_marginLeft="160dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/bioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planets_post_bioma"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"

        android:textSize="15sp"
        />



    <TextView
        android:id="@+id/populacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planets__post_populacao"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="80dp"

        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        />

</androidx.cardview.widget.CardView>