<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#2B2828"
        tools:ignore="MissingConstraints"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        style="@style/Titulo"
        android:id="@+id/tv_titulo"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_planetas"
        android:textColor="#000"
        android:textSize="20dp"
        android:onClick="telaPlanetas"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        android:id="@+id/bt_planetas"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_criar_atualizar_personagens"
        android:textColor="#000"
        android:textSize="15dp"
        android:onClick="criarAtualizarPersonagem"
        app:layout_constraintTop_toBottomOf="@+id/bt_planetas"
        android:id="@+id/bt_criar_personagem"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"

        />



    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_excluir_personagens"
        android:textColor="#000"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_planetas"
        android:id="@+id/bt_excluir_personagem"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="deletarPersonagem"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_personagens"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_excluir_personagem" />



</androidx.constraintlayout.widget.ConstraintLayout>